app/assets/stylesheets/_variables.scss
//
// Variables
// --------------------------------------------------


// Import Bootstrap functions to use inside variables values
@import 'bootstrap/scss/functions';



// Prefix for :root CSS variables

$prefix: ar- !default;


//== Colors
//
// Gray and brand colors to use across the Theme.

// Grayscale
$white: #fff !default;
$gray-100: #f6f9fc !default;
$gray-200: #edf1f5 !default;
$gray-300: #e3e9ef !default;
$gray-400: #d7dde2 !default;
$gray-500: #b4bbc3 !default;
$gray-600: #858c97 !default;
$gray-700: #576071 !default;
$gray-800: #434a57 !default;
$gray-900: #121519 !default;
$black: #000 !default;

// Theme colors
$primary: #414833;
$secondary: $gray-200 !default;
$info: #1b76b3 !default;
$success: #3fca90 !default;
$warning: #edcb50 !default;
$danger: #ed5050 !default;
$light: $white !default;
$dark: $gray-900 !default;
$terracota: #cb6843;
$yelloworange: #FFAE42;

.bg-footer {
  background-color: $secondary;
}

#playButton {
  background-color: $yelloworange;
  border: none;
}

#playbuttontext {
  color: white;
}


.d-block {
  color: white;
}

.nav-item {
  font-size: 13pt;
}

@media (max-width: 1200px) {
  .display-1 {
    font-size: 5rem;
    color: white;
  }
}


@media (max-width: 992px) {
  #navbarBrand {
    display: none;
  }
}

@media (max-width: 380px) {
  .d-block {
    color: black;
    top: 10px;
    font-size: 10pt;
  }
}

@media (max-width: 646px) {
  #playbuttontext {
    color: black;
  }
}

// Bootstrap's $theme-colors map
$theme-colors: (
  'primary': $primary,
  'secondary': $secondary,
  'success': $success,
  'info': $info,
  'warning': $warning,
  'danger': $danger,
  'light': $light,
  'dark': $dark) !default;

// User selection color
$user-selection-color: rgba(var(--#{$prefix}primary-rgb), .22) !default;


// Options
//
// Modifying Bootstrap global options

$enable-negative-margins: true !default;
$enable-smooth-scroll: false !default;
$enable-dark-mode: true !default;

// Spacing

$spacer: 1rem !default;


// Grid containers
//
// Modifying default Bootstrap's $container-max-widths map (max-width of .container)
$container-max-widths: (
  sm: 95%,
  md: 95%,
  lg: 95%,
  xl: 95%,
  xxl: 1320px) !default;


// Body

$body-color: $gray-700 !default;
$body-bg: $white !default;
$body-dark-mode-bg: $gray-900 !default;
$text-muted: var(--#{$prefix}gray-600) !default;


// Links

$link-color: $primary !default;
$link-decoration: underline !default;
$link-hover-color: darken($link-color, 8%) !default;
$link-hover-decoration: none !default;
$link-transition: color .2s ease-in-out !default;
$emphasized-link-hover-darken-percentage: 0% !default;


// Components
//
// Define common padding and border radius sizes and more.

$border-width: 1px !default;

$border-color: $gray-300 !default;
$border-light-color: rgba($white, .13) !default;

$border-radius: 1rem !default;
$border-radius-sm: calc(var(--#{$prefix}border-radius) * .75) !default;
$border-radius-lg: calc(var(--#{$prefix}border-radius) * 1.125) !default;
$border-radius-xl: calc(var(--#{$prefix}border-radius) * 1.5) !default;
$border-radius-2xl: calc(var(--#{$prefix}border-radius) * 2.25) !default;
$border-radius-pill: 50rem !default;


// Theme shadows (if enabled)

$box-shadow-sm: 0 .375rem .75rem -.125rem rgba(208, 208, 196, .24) !default;
$box-shadow: 0 .4375rem 1.25rem rgba(208, 208, 196, .32) !default;
$box-shadow-lg: 0 .5rem 1.75rem -.125rem rgba(208, 208, 196, .48) !default;


// Fonts
//
// Font, line-height, and color for body text, headings, and more.

$font-family-sans-serif: 'Barlow',
  sans-serif;

$font-size-root: 1rem !default;
$font-size-base: $font-size-root !default;
$font-size-xl: calc(var(--#{$prefix}body-font-size) * 1.25) !default;
$font-size-lg: calc(var(--#{$prefix}body-font-size) * 1.125) !default;
$font-size-sm: calc(var(--#{$prefix}body-font-size) * .875) !default;
$font-size-xs: calc(var(--#{$prefix}body-font-size) * .75) !default;

$font-weight-normal: 400 !default;
$font-weight-medium: 500 !default;
$font-weight-semibold: 600 !default;
$font-weight-bold: 700 !default;

$line-height-base: 1.5 !default;
$line-height-sm: 1.4 !default;
$line-height-lg: 1.6 !default;

$h1-font-size: $font-size-base * 2.5 !default;
$h2-font-size: $font-size-base * 2 !default;
$h3-font-size: $font-size-base * 1.75 !default;
$h4-font-size: $font-size-base * 1.5 !default;
$h5-font-size: $font-size-base * 1.25 !default;
$h6-font-size: $font-size-base !default;

// Modifying default Bootstrap's $font-sizes map
$font-sizes: (
  1: $h1-font-size,
  2: $h2-font-size,
  3: $h3-font-size,
  4: $h4-font-size,
  5: $h5-font-size,
  6: $h6-font-size,
  'xl': $font-size-xl,
  'lg': $font-size-lg,
  'base': $font-size-base,
  'sm': $font-size-sm,
  'xs': $font-size-xs) !default;

$lead-font-size: $font-size-base * 1.5 !default;
$lead-font-weight: $font-weight-normal !default;

$headings-margin-bottom: $spacer !default;
$headings-font-weight: $font-weight-semibold !default;
$headings-line-height: 1.3 !default;
$headings-color: var(--#{$prefix}gray-900) !default;

// Modifying default Bootstrap's $display-font-sizes map
$display-font-sizes: (
  1: $font-size-base * 5,
  2: $font-size-base * 4.5,
  3: $font-size-base * 4,
  4: $font-size-base * 3.5,
  5: $font-size-base * 3,
  6: $font-size-base * 2.625) !default;

$display-font-weight: $font-weight-semibold !default;

// Paragraphs
$paragraph-margin-bottom: $spacer * 1.125 !default;

// Blockquote
$blockquote-font-size: $font-size-base * 1.5 !default;
$blockquote-color: var(--#{$prefix}gray-900) !default;
$blockquote-footer-color: var(--#{$prefix}gray-900) !default;
$blockquote-footer-font-size: $font-size-base !default;
$blockquote-footer-font-weight: $font-weight-semibold !default;
$blockquote-mark-size: 3rem !default;
$blockquote-mark-color: var(--#{$prefix}primary) !default;

// Inline list
$list-inline-padding: $spacer !default;


// Horizontal rule

$hr-margin-y: 0 !default;
$hr-border-width: var(--#{$prefix}border-width) !default;
/* ... */

